--- a/Project.toml
+++ b/Project.toml
@@ -4,8 +4,12 @@ authors = ["Northwemko <yinyangxiangsheng@gmail.com> and contributors"]
 version = "0.1.0"
 
 [deps]
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 HalfIntegers = "f0d1745a-41c9-11e9-1dd9-e5d34d218721"
-Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
+RationalRoots = "308eb6b3-cc68-5ff3-9e97-c3c4da4fa681"
+WignerSymbols = "9f57e263-0b3d-5e2e-b1be-24f2bb48858b"
 
 [compat]
 julia = "1"
