--- a/Project.toml
+++ b/Project.toml
@@ -13,6 +13,7 @@ WignerSymbols = "9f57e263-0b3d-5e2e-b1be-24f2bb48858b"
 
 [compat]
 HalfIntegers = "1"
+RationalRoots = "0.2"
 julia = "1"
 
 [extras]
