--- a/Project.toml
+++ b/Project.toml
@@ -1,14 +1,15 @@
 name = "AtomBase"
 uuid = "640af26c-ec64-41b7-8129-95595126c51b"
 authors = ["Northwemko <yinyangxiangsheng@gmail.com> and contributors"]
-version = "1.5.0"
+version = "1.6.0"
 
 [deps]
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 HalfIntegers = "f0d1745a-41c9-11e9-1dd9-e5d34d218721"
-IndexedTables = "6deec6e2-d858-57c5-ab9b-e6ca5bd20e43"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 RationalRoots = "308eb6b3-cc68-5ff3-9e97-c3c4da4fa681"
+UsefulFunctions = "e5fb00c2-d19e-4bad-b01d-1af59f56b2b2"
 WignerSymbols = "9f57e263-0b3d-5e2e-b1be-24f2bb48858b"
 
 [compat]
