--- a/Project.toml
+++ b/Project.toml
@@ -7,6 +7,7 @@ version = "1.6.0"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 HalfIntegers = "f0d1745a-41c9-11e9-1dd9-e5d34d218721"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+PhysicalConstants = "5ad8b20f-a522-5ce9-bfc9-ddf1d5bda6ab"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 RationalRoots = "308eb6b3-cc68-5ff3-9e97-c3c4da4fa681"
 UsefulFunctions = "e5fb00c2-d19e-4bad-b01d-1af59f56b2b2"
