--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,7 @@ LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 PhysicalConstants = "5ad8b20f-a522-5ce9-bfc9-ddf1d5bda6ab"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 RationalRoots = "308eb6b3-cc68-5ff3-9e97-c3c4da4fa681"
+Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 UsefulFunctions = "e5fb00c2-d19e-4bad-b01d-1af59f56b2b2"
 WignerSymbols = "9f57e263-0b3d-5e2e-b1be-24f2bb48858b"
 
