--- a/Project.toml
+++ b/Project.toml
@@ -19,6 +19,7 @@ DataFrames = "1"
 HalfIntegers = "1"
 PhysicalConstants = "0.2"
 RationalRoots = "0.2"
+Unitful = "1"
 WignerSymbols = "2"
 julia = "1"
 
